# todo

./: Makefile  pyproject.toml
src/config/: settings.py  urls.py
src/todolist/: urls.py
