[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["mabredin <mbredin@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
